- Order Report Cards by Course title in ReportCards.fnc.php
- Fix SQL error when more than 1 Attendance Period Teacher in Export.php
- Fix typo in INSTALL instructions + update instructions for Ubuntu 14.04
- Fix Custom User Permissions: remove default program in Exceptions.php
- Fix Portal Polls display for Teachers & Parents in Portal.php

Changes in 2.8.26
-----------------
- Fix SQL errors when Creating User Food Service account / barcode
- Add Danish & Malaysian locale & flags files
- Allow negative amounts in Student Billing & Accounting modules
- Fix: Limit Accounting Expenses, Incomes, Salaries & Staff Payments to User School
- Give Parents & Students access to the Discipline Referrals #77
- Improve French translation

Changes in 2.8.25
-----------------
- Fix JS error related to jqPlot loading: wrap JS code inside 500ms timeout in *Breakdown.php
- Prepare for State Reports module: Save Report bottom button & modname exception
- Remove State_Reports.zip orginal module archive
- Remove State_Reports from core modules & rename to "Reports"
- Update official site URLs: HTTPS on rosariosis.org
- Fix Delete School Field in SchoolFields.php
- Improve French & update French & Spanish translations

Changes in 2.8.24
-----------------
- Fix SQL error when saving Parent Course Period in Courses.php
- Improve French translations
- Fix 1 option sub-menu height when mouse over Module in stylesheet.css
- Correct English default Help text in Help_en.php
- More explicit Assignment Type deletion Prompt message in Assignments.php
- Fix _delTree() function name typo in Modules.inc.php & Plugins.inc.php
- Create ReferralLog functions for reuse in Discipline/includes/ReferralLog.fnc.php
- Update PDFStart() & PDFStop() functions to enable Save PDF mode in PDF.php
- Add PHPMailer 5.2.14 class (email creation & (SMTP) transport) in classes/PHPMailer/
- Zap programs which are not allowed in Help.php
- Create ReportCards functions for reuse in Grades/includes/ReportCards.fnc.php